salesforce/force-app/main/default/objects/Testimonial__c/Testimonial__c.object-meta.xml
<CustomObject>
    <label>Testimonial</label>
    <nameField>
        <label>Testimonial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Testimonials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>