salesforce/force-app/main/default/objects/Testimonial__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>