salesforce/force-app/main/default/objects/Testimonial__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Testimonials</relationshipLabel>
    <relationshipName>Testimonials</relationshipName>
    <type>Lookup</type>
</CustomField>