salesforce/force-app/main/default/objects/Testimonial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Rating__c</columns>
    <columns>Trip__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Testimonials</label>
</ListView>